--- a/frontend/src/assets/css/styles.scss
+++ b/frontend/src/assets/css/styles.scss
@@ -1,5 +1,6 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
 @import './variables.scss';
+@import './layers.scss';
 @import './focus.scss';
 
 @import './board.scss';
@@ -32,20 +33,10 @@
 @import './filtersitem.scss';
 @import './UserDropdown.scss';
 @import './spinner.scss';
+@import './screen-freeze.scss';
 
 @import './intro.scss';
 
-/**
-*  IMPORTANT NOTE
-*
-* Layers
-* - 0 - default - all static elements like tables or forms
-* - < 100 - elements that are over static content (order list)
-* - 100 - header
-* - 200 - backdrop
-* - 200 < - elements that are over backdrop (header expanded)
-* - 400 - screen-freeze
-*/
 html {
   overflow-y: scroll !important;
   overflow-x: auto !important;
@@ -215,7 +206,7 @@ body {
   position: fixed;
   width: 100%;
   height: 100%;
-  z-index: 200;
+  z-index: $z-index-backdrop;
 }
 
 .order-list-panel {
@@ -226,7 +217,7 @@ body {
   width: 472px;
   background-color: #fff;
   border-left: 1px solid $brand-border-color;
-  z-index: 201;
+  z-index: $z-index-header-menu;
   right: 0;
   bottom: 0;
   overflow-y: scroll;
@@ -263,7 +254,7 @@ body {
 
 .order-list-nav {
   position: fixed;
-  z-index: 201;
+  z-index: $z-index-header-menu;
   width: 472px;
   background: #fff;
   top: 55px;
@@ -434,74 +425,6 @@ body {
 
 .elements-line > * {
   flex: 1 1 auto;
-}
-
-.screen-freeze {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 400;
-  background-color: rgba(18, 18, 18, .7);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: #fff;
-  pointer-events: visible;
-
-  .modal-content-wrapper {
-    z-index: 100;
-  }
-
-  .click-overlay {
-    position: absolute;
-    z-index: 50;
-    width: 100%;
-    height: 100%;
-  }
-
-  &.light {
-    background-color: rgba(255, 255, 255, 0.8);
-    z-index: 500;
-    overflow-y: scroll;
-    color: $brand-font-color;
-
-    @media (min-width: $breakpoint-md) {
-      overflow-y: auto;
-    }
-
-    .overlay-field {
-      width: 100%;
-
-      .row {
-        justify-content: center;
-      }
-    }
-
-    .form-group {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-    }
-
-    input {
-      text-align: center;
-      font-size: 60px;
-    }
-
-    .form-control-label {
-      font-size: 30px;
-      text-align: center;
-    }
-  }
-}
-
-.screen-prompt-freeze {
-  background-color: transparent;
 }
 
 .rotate {
@@ -1065,7 +988,7 @@ body {
   display: inline-block;
   position: absolute;
   /* it has to come on top of the overlay */
-  z-index: 500;
+  z-index: $z-index-filters;
   left: 0;
   top: 31px;
   list-style: none;
@@ -1436,7 +1359,7 @@ body {
 }
 
 .raw-modal {
-  z-index: 399;
+  z-index: $z-index-modal;
 }
 
 /*
